WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30499
Web Inspector: Crash when clicking on errors/warnings counter
https://bugs.webkit.org/show_bug.cgi?id=30499
Summary
Web Inspector: Crash when clicking on errors/warnings counter
Pavel Feldman
Reported
2009-10-18 18:52:45 PDT
1. Open Web Inspector for a page that has errors / warnings 2. Click on the errors/warnings counter (small yellow/red icon in the bottom right corner) See crash (assertion failure): #0 0x03f0d7ff in WebCore::firstDeepEditingPositionForNode at htmlediting.h:126 #1 0x04713555 in WebCore::RenderBox::positionForPoint at RenderBox.cpp:2698 #2 0x047808b1 in WebCore::RenderReplaced::positionForPoint at RenderReplaced.cpp:254 #3 0x046e031b in WebCore::RenderBlock::positionForPointWithInlineChildren at RenderBlock.cpp:3434 #4 0x046e05d6 in WebCore::RenderBlock::positionForPoint at RenderBlock.cpp:3472 #5 0x0473d366 in WebCore::RenderInline::positionForPoint at RenderInline.cpp:503 #6 0x04206d72 in WebCore::EventHandler::handleMousePressEventSingleClick at EventHandler.cpp:323 #7 0x04207848 in WebCore::EventHandler::handleMousePressEvent at EventHandler.cpp:418 #8 0x0420811f in WebCore::EventHandler::handleMousePressEvent at EventHandler.cpp:1265 #9 0x0420c472 in WebCore::EventHandler::mouseDown at EventHandlerMac.mm:561 #10 0x00347579 in -[WebHTMLView mouseDown:] at WebHTMLView.mm:3382
Attachments
patch
(1.33 KB, patch)
2009-10-30 08:55 PDT
,
Alexander Pavlov (apavlov)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2009-10-30 08:55:59 PDT
Created
attachment 42213
[details]
patch
WebKit Commit Bot
Comment 2
2009-10-30 10:28:02 PDT
Comment on
attachment 42213
[details]
patch Clearing flags on attachment: 42213 Committed
r50341
: <
http://trac.webkit.org/changeset/50341
>
WebKit Commit Bot
Comment 3
2009-10-30 10:28:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug