2009-10-30  Alexander Pavlov  <apavlov@chromium.org>

Reviewed by Timothy Hatcher.

        Fix Web Inspector crash on the errors/warnings counter click

        RenderObject::createVisiblePosition(const Position& position)
        understands "null Positions", so we can construct such a Position manually.

        https://bugs.webkit.org/show_bug.cgi?id=30499

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::positionForPoint):

Canonical link: https://commits.webkit.org/41783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50341 268f45cc-cd09-0410-ab3c-d52691b4dbfc